--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Amiraf",
+  "name": "Amiraf - Votre boutique en ligne de confiance",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo64.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
